--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+db.sqlite3
+project/__pycache__/wsgi.cpython-311.pyc
+project/__pycache__/wsgi.cpython-311.pyc
+project/__pycache__/urls.cpython-311.pyc
+project/__pycache__/settings.cpython-311.pyc
+project/__pycache__/__init__.cpython-311.pyc
+app/__pycache__/views.cpython-311.pyc
+app/__pycache__/__init__.cpython-311.pyc
